Revamp privacy.html with updated styles and content
Updated the privacy policy page with new styles, structure, and content.

--- a/privacy.html
+++ b/privacy.html
@@ -1,149 +1,316 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Privacy Policy - NW3DPrinting, LLC</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f7f7f7;
-      color: #222;
-    }
-    header {
-      background: #111;
-      color: #fff;
-      padding: 1.5rem;
-      text-align: center;
-    }
-    nav a {
-      color: #fff;
-      margin: 0 0.5rem;
-      text-decoration: none;
-      font-size: 0.95rem;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    main {
-      max-width: 800px;
-      margin: 2rem auto;
-      background: #fff;
-      padding: 2rem;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
-      border-radius: 8px;
-    }
-    h1, h2 {
-      margin-top: 0;
-    }
-    footer {
-      text-align: center;
-      font-size: 0.8rem;
-      color: #666;
-      margin: 2rem 0;
-    }
-  </style>
+<meta charset="UTF-8" />
+<title>Privacy Policy – NW3DPrinting, LLC</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+
+<style>
+  body {
+    margin: 0;
+    font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial;
+    background: #ffffff;
+    color: #f5f5f5;
+  }
+
+  header {
+    position: sticky;
+    top: 0;
+    z-index: 20;
+    backdrop-filter: blur(6px);
+    background: rgba(30,30,30,0.92);
+    border-bottom: 1px solid rgba(255,255,255,0.1);
+  }
+
+  .header-inner {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0.6rem 1.25rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .header-left {
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+  }
+
+  header img.logo {
+    height: 60px;
+  }
+
+  nav {
+    display: flex;
+    gap: 1.25rem;
+  }
+
+  nav a {
+    color: #f2f2f2;
+    text-decoration: none;
+    font-size: 0.95rem;
+    font-weight: 300;
+  }
+
+  /* Page background like the reddish sections */
+  .page-section {
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    padding: 6rem 1.5rem 5rem;
+    background-color: #1b1b1b;
+    background-image:
+      repeating-linear-gradient(
+        135deg,
+        rgba(255,255,255,0.03) 0px,
+        rgba(255,255,255,0.03) 1px,
+        transparent 1px,
+        transparent 8px
+      ),
+      radial-gradient(circle at 12% 25%, rgba(255,59,59,0.22) 0, transparent 55%),
+      radial-gradient(circle at 85% 70%, rgba(255,59,59,0.18) 0, transparent 52%);
+    box-sizing: border-box;
+  }
+
+  .page-inner {
+    max-width: 900px;
+    margin: 0 auto;
+    position: relative;
+    z-index: 2;
+  }
+
+  .page-box {
+    background: rgba(0,0,0,0.35);
+    border-radius: 18px;
+    padding: 2.5rem 2.2rem;
+    box-shadow: 0 18px 40px rgba(0,0,0,0.5);
+  }
+
+  h1 {
+    font-size: 2.2rem;
+    margin-top: 0;
+    margin-bottom: 0.75rem;
+    font-weight: 400;
+    color: #ffffff;
+  }
+
+  h2 {
+    font-size: 1.25rem;
+    margin-top: 1.9rem;
+    margin-bottom: 0.6rem;
+    font-weight: 400;
+    color: #ffffff;
+  }
+
+  p, li {
+    font-size: 0.98rem;
+    line-height: 1.65;
+    color: #e3e3e3;
+  }
+
+  ul {
+    margin: 0.4rem 0 0.4rem 1.3rem;
+    padding: 0;
+  }
+
+  strong {
+    color: #ffffff;
+  }
+
+  a {
+    color: #ffffff;
+    text-decoration: underline;
+  }
+
+  footer {
+    background: rgba(30,30,30,0.92);
+    color: #e5e5e5;
+    padding: 3rem 1.5rem 2.5rem;
+  }
+
+  .footer-inner {
+    max-width: 1100px;
+    margin: 0 auto;
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  }
+
+  .footer-title {
+    font-size: 1.1rem;
+    margin-bottom: 0.8rem;
+    font-weight: 600;
+  }
+
+  .footer-links a {
+    color: #e5e5e5;
+    text-decoration: none;
+    font-size: 0.9rem;
+    display: block;
+    margin: 0.25rem 0;
+  }
+
+  .footer-small a {
+    color: #e5e5e5;
+    text-decoration: none;
+  }
+
+  .footer-bottom {
+    text-align: center;
+    margin-top: 2rem;
+    font-size: 0.8rem;
+    color: #bfbfbf;
+  }
+</style>
 </head>
+
 <body>
-  <header>
-    <h1>NW3DPrinting, LLC</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="privacy.html">Privacy Policy</a>
-      <a href="terms.html">Terms of Service</a>
-    </nav>
-  </header>
 
-  <main>
-    <h1>Privacy Policy</h1>
-    <p><strong>Last Updated:</strong> <!-- add today’s date --> </p>
+<header>
+  <div class="header-inner">
+    <div class="header-left">
+      <img src="NW3D_logo.png" alt="NW3D Logo" class="logo" />
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="mailto:nick@nw3d.com">Contact&nbsp;Us</a>
+      </nav>
+    </div>
+  </div>
+</header>
 
-    <p>
-      NW3DPrinting, LLC ("we," "us," or "our") operates this website to provide information
-      about our business and services. We respect your privacy and are committed to protecting
-      your personal information.
-    </p>
+<section class="page-section">
+  <div class="page-inner">
+    <div class="page-box">
+      <h1>Privacy Policy</h1>
+      <p><strong>Effective date:</strong> January 4, 2026</p>
+      <p>
+        This Privacy Policy describes how NW3DPrinting, LLC ("NW3DPrinting," "we," "us," or "our")
+        collects, uses, and protects information in connection with our website
+        <strong>nw3d.com</strong> and related pages (the "Site").
+      </p>
 
-    <h2>1. Information We Collect</h2>
-    <p>We may collect the following types of information:</p>
-    <ul>
-      <li>Information you voluntarily provide (such as name and email when you contact us).</li>
-      <li>Basic technical information collected automatically, such as IP address, browser type,
-          pages visited, and general usage data.</li>
-    </ul>
-    <p>We do not knowingly collect personal information from children under 13.</p>
+      <h2>1. Information We Collect</h2>
+      <p>We currently do not process payments directly through this Site. However, we may collect:</p>
+      <ul>
+        <li><strong>Contact Information:</strong> such as your name and email address if you contact us directly (for example, by emailing <a href="mailto:nick@nw3d.com">nick@nw3d.com</a>).</li>
+        <li><strong>Technical Information:</strong> basic information about how you interact with the Site, such as IP address, browser type, pages visited, and timestamps. This may be collected through standard server logs or basic analytics tools.</li>
+      </ul>
 
-    <h2>2. How We Use Your Information</h2>
-    <p>We may use your information to:</p>
-    <ul>
-      <li>Respond to inquiries or support requests.</li>
-      <li>Operate, maintain, and improve our website.</li>
-      <li>Comply with legal obligations.</li>
-    </ul>
-    <p>If you are a customer, we may also use your information to process orders and provide
-       customer support related to purchases.</p>
-    <p>We do not sell personal information to third parties.</p>
+      <h2>2. Information from Third-Party Platforms</h2>
+      <p>
+        Our products are primarily sold through third-party platforms such as <strong>Etsy</strong> and
+        <strong>TikTok Shop</strong>. When you purchase through those platforms, your order information is
+        handled according to their own privacy policies. We may receive certain order details from those
+        platforms (for example, product ordered, quantities, and shipping region) to fulfill and support
+        your order, but we do not control the data collection practices on those platforms.
+      </p>
 
-    <h2>3. Cookies and Similar Technologies</h2>
-    <p>
-      We may use cookies or similar technologies to understand how visitors use the site
-      and to improve functionality and performance. You can disable cookies in your browser
-      settings, though some features of the site may not function properly as a result.
-    </p>
+      <h2>3. How We Use Your Information</h2>
+      <p>We may use the information we collect to:</p>
+      <ul>
+        <li>Respond to questions, support requests, or custom order inquiries.</li>
+        <li>Understand how visitors use our Site so we can maintain and improve it.</li>
+        <li>Monitor for abuse, spam, or security issues.</li>
+        <li>Comply with legal obligations and enforce our Terms of Service.</li>
+      </ul>
 
-    <h2>4. Sharing of Information</h2>
-    <p>We may share information only:</p>
-    <ul>
-      <li>With service providers who assist in operating our business and website.</li>
-      <li>When required by law, regulation, or legal process.</li>
-      <li>To protect our rights, property, or safety, or that of others.</li>
-    </ul>
-    <p>Service providers are permitted to use information only to perform services for us.</p>
+      <h2>4. Cookies and Similar Technologies</h2>
+      <p>
+        Our Site may use cookies or similar technologies to provide basic functionality and understand
+        general usage patterns. You can usually control cookies through your browser settings. Disabling
+        cookies may affect some features of the Site, but the core content should remain accessible.
+      </p>
 
-    <h2>5. Data Security</h2>
-    <p>
-      We take reasonable administrative, technical, and physical safeguards to protect
-      your information. However, no method of transmission over the internet or method of
-      electronic storage is 100% secure, and we cannot guarantee absolute security.
-    </p>
+      <h2>5. How We Share Information</h2>
+      <p>We do not sell your personal information. We may share information in the following situations:</p>
+      <ul>
+        <li><strong>Service Providers:</strong> With trusted third parties who help us operate, maintain, or analyze our Site or infrastructure.</li>
+        <li><strong>Legal Requirements:</strong> When required to do so by law, subpoena, court order, or other legal process, or if we believe disclosure is necessary to protect our rights, safety, or property.</li>
+        <li><strong>Business Transfers:</strong> If NW3DPrinting is involved in a merger, acquisition, or asset sale, information may be transferred as part of that transaction, subject to reasonable confidentiality protections.</li>
+      </ul>
 
-    <h2>6. Your Rights</h2>
-    <p>
-      Depending on your location, you may have rights regarding access to, correction of, or
-      deletion of your personal information, where legally applicable. To exercise these rights,
-      please contact us using the information below.
-    </p>
+      <h2>6. Data Retention</h2>
+      <p>
+        We retain contact and technical information only for as long as reasonably necessary to fulfill the
+        purposes described in this policy, comply with our legal obligations, resolve disputes, and enforce
+        our agreements.
+      </p>
 
-    <h2>7. Third-Party Links</h2>
-    <p>
-      Our website may contain links to third-party websites. We are not responsible for the
-      privacy practices or content of those sites. We encourage you to review the privacy
-      policies of any third-party sites you visit.
-    </p>
+      <h2>7. Your Choices</h2>
+      <p>You can:</p>
+      <ul>
+        <li>Choose not to contact us through the Site if you prefer not to share your email address.</li>
+        <li>Adjust your browser settings to limit or block cookies.</li>
+        <li>Contact us at <a href="mailto:nick@nw3d.com">nick@nw3d.com</a> if you have questions about any information we may have about you via the Site.</li>
+      </ul>
 
-    <h2>8. Changes to This Privacy Policy</h2>
-    <p>
-      We may update this Privacy Policy from time to time. Changes will be posted on this page
-      with an updated "Last Updated" date. Your continued use of the website after any changes
-      indicates your acceptance of the revised Privacy Policy.
-    </p>
+      <h2>8. Children's Privacy</h2>
+      <p>
+        Our Site and products are not directed to children under the age of 13, and we do not knowingly
+        collect personal information from children under 13. If you believe a child has provided us
+        information through the Site, please contact us so we can delete it.
+      </p>
 
-    <h2>9. Contact Us</h2>
-    <p>If you have questions about this Privacy Policy, you may contact us at:</p>
-    <p>
-      <strong>NW3DPrinting, LLC</strong><br />
-      Email: <a href="mailto:contact@nw3d.com">contact@nw3d.com</a>
-    </p>
-  </main>
+      <h2>9. Security</h2>
+      <p>
+        We use reasonable technical and organizational measures to protect information transmitted to and
+        from the Site. However, no method of transmission or storage is 100% secure, and we cannot guarantee
+        absolute security.
+      </p>
 
-  <footer>
-    &copy; <span id="year"></span> NW3DPrinting, LLC. All rights reserved.
-  </footer>
+      <h2>10. Links to Other Sites</h2>
+      <p>
+        Our Site may include links to third-party websites such as Etsy, TikTok Shop, or other platforms.
+        We are not responsible for the content or privacy practices of those sites. We encourage you to
+        review their privacy policies before providing any information.
+      </p>
 
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
+      <h2>11. Changes to This Privacy Policy</h2>
+      <p>
+        We may update this Privacy Policy from time to time. If we make material changes, we will update
+        the "Effective date" at the top of this page. Your continued use of the Site after any changes
+        indicates your acceptance of the updated policy.
+      </p>
+
+      <h2>12. Contact Us</h2>
+      <p>
+        If you have any questions about this Privacy Policy or our data practices, you can contact us at:
+      </p>
+      <p>
+        <strong>NW3DPrinting, LLC</strong><br />
+        Email: <a href="mailto:nick@nw3d.com">nick@nw3d.com</a>
+      </p>
+    </div>
+  </div>
+</section>
+
+<footer>
+  <div class="footer-inner">
+    <div>
+      <div class="footer-title">NW3DPrinting, LLC</div>
+      <div class="footer-links">
+        <a href="privacy.html">Privacy Policy</a>
+        <a href="terms.html">Terms of Service</a>
+      </div>
+    </div>
+
+    <div style="text-align:right;">
+      <div class="footer-title">Contact</div>
+      <div class="footer-small">
+        <a href="mailto:nick@nw3d.com">nick@nw3d.com</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    © <script>document.write(new Date().getFullYear())</script> NW3DPrinting, LLC — All Rights Reserved
+  </div>
+</footer>
+
 </body>
 </html>
